--- a/www/templates/inicial.html
+++ b/www/templates/inicial.html
@@ -11,13 +11,23 @@
                 <p>4 informativos não lidos</p>
             </ion-item>
         </ion-list>
-        <br>
-        <div ng-repeat="mensagem in resultado track by $index">
+        <div class="list card" ng-repeat="mensagem in resultado track by $index">
+
+            <div class="item item-avatar">
+                <h2>{{mensagem.titulo}}</h2>
+                <p>{{mensagem.conteudo}}</p>
+            </div>
+            <div class="item item-image">
+                <img src="http://demomarcospenha.host22.com/imagens/{{mensagem.imagem}}">
+            </div>
+
+        </div>
+ <!--   <div ng-repeat="mensagem in resultado track by $index">
             <h3 id="inicial-heading2" style="color:#000000;text-align:center;" class=" ">{{mensagem.titulo}}</h3>
             <div class="">
                 <img src="http://demomarcospenha.host22.com/imagens/{{mensagem.imagem}}" width="100%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
             </div>
-        </div>
+        </div> -->
         <div id="inicial-button-bar2" class=" button-bar "></div>
         <div class="item item-body " id="inicial-list-item-container1"></div>
     </ion-content>
