Correção de textos na view

--- a/www/templates/inicial.html
+++ b/www/templates/inicial.html
@@ -15,7 +15,7 @@
         </ion-list>
         <div class="list card" ng-repeat="mensagem in resultado track by $index">
 
-            <div class="item item-avatar">
+            <div class="item">
                 <h2>{{mensagem.titulo}}</h2>
                 <p>{{mensagem.conteudo}}</p>
             </div>
