--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,14 +1,13 @@
-<ion-view title="Login" id="page7" class=" ">
+<ion-view title="Login" id="page7" class=" " >
     <ion-content padding="true" class="has-header">
-        <form id="login-form10" class="list ">
+        <form id="login-form10" class="list" ng-submit="login()" method="post" ng-controller="loginCtrl">
             <ion-list id="login-list10" class=" ">
                 <label class="item item-input " id="login-input1">
                     <span class="input-label">CPF</span>
-                    <input type="text" placeholder="">
+                    <input type="text" placeholder="" ng-model="cpf">
                 </label>
             </ion-list>
-            <div class="spacer" style="height: 40px;"></div>
-            <a ui-sref="menu.inicial" id="login-button5" class=" button button-calm  button-block ">Log in</a>
+            <button type="submit" id="addContact-button1" class="button button-positive  button-block icon-right">Entrar</button>
         </form>
     </ion-content>
 </ion-view>
