--- a/www/templates/inicial.html
+++ b/www/templates/inicial.html
@@ -23,6 +23,13 @@
             </div>
 
         </div>
+
+        <div>
+            <p>Latitude: {{latitude}}</p>
+            <p>Longitude: {{longitude}}</p>
+        </div>
+
+
  <!--   <div ng-repeat="mensagem in resultado track by $index">
             <h3 id="inicial-heading2" style="color:#000000;text-align:center;" class=" ">{{mensagem.titulo}}</h3>
             <div class="">
